# fastapi-keycloak

./: .env.example  main.py  pyproject.toml
src/auth/: auth_controller.py
src/auth/guards/: user_guard.py
src/auth/use_cases/login/: login_controller.py
src/auth/use_cases/login_callback/: login_callback_use_case.py
src/auth/use_cases/logout/: logout_controller.py  logout_use_case.py
src/auth/use_cases/set_cookies/: set_cookies_use_case.py
src/common/: constants.py
src/common/models/exceptions/: unauthorized_exception.py
src/keycloak/models/schemas/: keycloak_tokens_schema.py
src/keycloak/use_cases/exchange_keycloak_code_for_token/: exchange_keycloak_code_for_token_use_case.py
src/keycloak/use_cases/get_jwks/: get_jwks_use_case.py
src/keycloak/use_cases/logout/: keycloak_logout_use_case.py
src/keycloak/use_cases/refresh_session/: refresh_session_use_case.py
src/keycloak/use_cases/validate_jwt/: validate_jwt_use_case.py
src/users/: users_controller.py
src/users/use_cases/get_info/: get_info_controller.py
